fixed the text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,10 @@ section{
     height: auto;
     background-color: pink;
     float: right;
-    padding: 5px 5px 5px 15px;
+    padding: 5px 5px 5px 5px;
     color: black;
     border: 1px solid black;
+    text-align: center;
 }
 section p{
     padding: 20px ;
